--- a/app/src/main/res/layout/grid_item_picture.xml
+++ b/app/src/main/res/layout/grid_item_picture.xml
@@ -8,6 +8,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:scaleType="centerCrop"
+        android:src="@mipmap/ic_launcher"
          />
 
     <Button
