--- a/app/src/main/res/layout/top_bar_layout.xml
+++ b/app/src/main/res/layout/top_bar_layout.xml
@@ -10,14 +10,16 @@
         android:layout_height="50dp">
 
         <TextView
+            android:textSize="14sp"
             android:id="@+id/cancel_tv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:gravity="center"
             android:text="@string/cancel" />
 
         <TextView
+            android:textSize="18sp"
             android:id="@+id/title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -26,6 +28,7 @@
             android:text="@string/location" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/ok_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
