添加网络框架

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="common_pressed">#20000000</color>
     <color name="bg">#e8e8e8</color>
     <color name="gray">#e8e8e8</color>
+    <color name="transparent">#00000000</color>
 
 </resources>
