--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,11 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
-
+    <color name="normal_black">#373737</color>
     <color name="common_pressed">#20000000</color>
     <color name="bg">#e8e8e8</color>
     <color name="gray">#e8e8e8</color>
+    <color name="gray_88">#888888</color>
     <color name="transparent">#00000000</color>
 
 </resources>
