--- a/app/src/main/res/layout/activity_zone_list_layout.xml
+++ b/app/src/main/res/layout/activity_zone_list_layout.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/bg"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/top_bar_layout"/>
+
     <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="10dp"
         android:id="@+id/zone_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
